# actix-ecommerce

./: .env  Cargo.toml  auth.db  catalog.db  catalog2.html  database.db  inventory.db  messages.db  orders.db  tenant.db  test.py
migrations/: 20260307091148_create_users.sql  20260307091423_create_password_resets.sql  20260307112524_create_emails.sql
src/: configs.rs  main.rs
